fix(dashboard): changed size of deadline bar in collapsed state

--- a/src/app/core/dashboard/dashboard.component.scss
+++ b/src/app/core/dashboard/dashboard.component.scss
@@ -164,7 +164,8 @@
 			&.extended {
 				position: absolute;
 				right: 0;
-				width: 80vw;
+				width: 75vw;
+				max-width: 65rem;
 				min-width: 0;
 
 				.toggle {
